# c-game-engine

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  compile.sh
engine/data/shaders/: circle.fs  circle.vs  line.fs  line.vs  shader.fs  shader.vs  text.vs
engine/data/structures/: 4way.txt  Lwall.txt  Tway.txt  horizontal_wall.txt  house.txt  straight_wall.txt  test.txt
engine/includes/: engine.h
engine/includes/audio/: audio_header.h  init.h
engine/includes/entities/: bullet.h  camera.h  enemy.h  entities_header.h  healthbar.h  pickup.h  player.h  star.h  world.h
engine/includes/entity/: entity.h  entity_header.h  init.h  physics.h
engine/includes/init/: crash.h
engine/includes/log/: init.h  log.h
engine/includes/object/: init.h  object.h  object_header.h
engine/includes/render/: init.h  render.h  renderer_header.h  shapes.h  texture.h
engine/includes/ui/: button.h  percentbar.h  text.h  ui_header.h
engine/includes/utils/: ansicolours.h  dictionary.h  dynarray.h  graph.h  memoryhandler.h  perlin.h  random.h  stack.h  utils_header.h
engine/includes/vector/: 4matrices.h  vector.h  vector_header.h
engine/includes/world/: world_header.h
engine/src/audio/: audio.c  init.c
engine/src/entities/: animal.c  ball.c  bullet.c  circle.c  enemy.c  healthbar.c  pickup.c  player.c  powerup.c  star.c  test.c  world.c
engine/src/entity/: entity.c  init.c  physics.c
engine/src/event/: event.c
engine/src/init/: crash.c  main.c
engine/src/log/: init.c  log.c
engine/src/object/: init.c  (+1 more)
game-engine-v3/: Makefile  README.md  compile.sh
(+48 files in other folders)
